Refactorización del GlobalExceptionHandler  y tests en GlobalExceptionHandlerTest para soportar completamente los patrones reactivos.En total se han ajustado 6 métodos del GlobalExceptionHandler y 8 test asociados en GlobalExceptionHandlerTest.Todos los manejadores de excepciones ahora retornan Mono<ResponseEntity<MessageDto>> para mantener la operación asincrónica y no bloqueante.