@@ -8,6 +8,7 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import org.mockito.InjectMocks;
 import org.mockito.MockitoAnnotations;
 import org.springframework.boot.test.autoconfigure.web.reactive.WebFluxTest;
@@ -31,6 +32,7 @@ import java.util.Objects;
 import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -58,38 +60,31 @@ class GlobalExceptionHandlerTest {
 
     @Test
     void testHandleResponseStatusException() {
-
-        // Arrange
-        String expectedErrorMessage = "Validation failed";
         HttpStatus expectedStatus = HttpStatus.BAD_REQUEST;
+        String expectedErrorMessage = "Validation failed";
         ResponseStatusException ex = new ResponseStatusException(expectedStatus, expectedErrorMessage);
 
-        GlobalExceptionHandler handler = new GlobalExceptionHandler();
-
-        // Act
-        ResponseEntity<MessageDto> responseEntity = handler.handleResponseStatusException(ex);
-
-        // Assert
-        assertEquals(expectedStatus, responseEntity.getStatusCode());
-        assertEquals(expectedErrorMessage, responseEntity.getBody().getMessage());
+        StepVerifier.create(globalExceptionHandler.handleResponseStatusException(ex))
+                .consumeNextWith(responseEntity -> {
+                    assertEquals(expectedStatus, responseEntity.getStatusCode());
+                    assertEquals(expectedErrorMessage, responseEntity.getBody().getMessage());
+                })
+                .verifyComplete();
     }
 
     @Test
     void testHandleResponseStatusException_NullDetailMessageArguments() {
-        // Arrange
         HttpStatus expectedStatus = HttpStatus.BAD_REQUEST;
         ResponseStatusException ex = mock(ResponseStatusException.class);
         when(ex.getStatusCode()).thenReturn(expectedStatus);
         when(ex.getDetailMessageArguments()).thenReturn(null);
 
-        GlobalExceptionHandler handler = new GlobalExceptionHandler();
-
-        // Act
-        ResponseEntity<MessageDto> responseEntity = handler.handleResponseStatusException(ex);
-
-        // Assert
-        assertEquals(expectedStatus, responseEntity.getStatusCode());
-        assertEquals("Validation failed", Objects.requireNonNull(responseEntity.getBody()).getMessage());
+        StepVerifier.create(globalExceptionHandler.handleResponseStatusException(ex))
+                .consumeNextWith(responseEntity -> {
+                    assertEquals(expectedStatus, responseEntity.getStatusCode());
+                    assertEquals("Validation failed", responseEntity.getBody().getMessage());
+                })
+                .verifyComplete();
     }
 
     @Test
@@ -99,12 +94,16 @@ class GlobalExceptionHandlerTest {
         BindingResult bindingResult = mock(BindingResult.class);
         when(bindingResult.getFieldErrors()).thenReturn(List.of(new FieldError("object", "field", "message")));
         when(methodArgumentNotValidException.getBindingResult()).thenReturn(bindingResult);
+        when(methodArgumentNotValidException.getMessage()).thenReturn("Validation failed");
 
-        // Act
-        ResponseEntity<MessageDto> responseEntity = globalExceptionHandler.handleMethodArgumentNotValidException(methodArgumentNotValidException);
-
-        // Assert
-        MatcherAssert.assertThat(responseEntity, notNullValue());
+        // Act & Assert
+        StepVerifier.create(globalExceptionHandler.handleMethodArgumentNotValidException(methodArgumentNotValidException))
+                .assertNext(responseEntity -> {
+                    assertEquals(HttpStatus.BAD_REQUEST, responseEntity.getStatusCode());
+                    assertNotNull(responseEntity.getBody());
+                    assertTrue(responseEntity.getBody().getMessage().contains("message"));
+                })
+                .verifyComplete();
     }
 
     @Test
@@ -112,87 +111,73 @@ class GlobalExceptionHandlerTest {
 
         // Arrange
         BindingResult bindingResult = mock(BindingResult.class);
-        FieldError fieldError = mock(FieldError.class);
-        when(fieldError.getField()).thenReturn("name");
-        when(fieldError.getDefaultMessage()).thenReturn("default message");
-        when(fieldError.getCodes()).thenReturn(new String[]{"message"});
-        when(bindingResult.getFieldErrors()).thenReturn(List.of(fieldError));
+        when(bindingResult.getFieldErrors()).thenReturn(Collections.emptyList()); // No field errors
         when(methodArgumentNotValidException.getBindingResult()).thenReturn(bindingResult);
+        when(methodArgumentNotValidException.getMessage()).thenReturn("Validation failed due to input errors");
 
-        // Act
-        ResponseEntity<MessageDto> responseEntity = globalExceptionHandler.handleMethodArgumentNotValidException(methodArgumentNotValidException);
-
-        // Assert
-        MatcherAssert.assertThat(responseEntity, notNullValue());
+        // Act & Assert
+        StepVerifier.create(globalExceptionHandler.handleMethodArgumentNotValidException(methodArgumentNotValidException))
+                .assertNext(responseEntity -> {
+                    assertEquals(HttpStatus.BAD_REQUEST, responseEntity.getStatusCode());
+                    assertNotNull(responseEntity.getBody());
+                    assertEquals("Validation failed due to input errors", responseEntity.getBody().getMessage());
+                })
+                .verifyComplete();
     }
 
     @Test
     void handleConstraintViolation() {
-        // Arrange
         Set<ConstraintViolation<?>> constraints = new HashSet<>();
-
-        ConstraintViolation<?> constraint1 = mock(ConstraintViolation.class);
-        when(constraint1.getMessage()).thenReturn("Expected message");
-        constraints.add(constraint1);
-
-        ConstraintViolation<?> constraint2 = mock(ConstraintViolation.class);
-        when(constraint2.getMessage()).thenReturn("Expected message");
-        constraints.add(constraint2);
+        ConstraintViolation<?> constraint = mock(ConstraintViolation.class);
+        when(constraint.getMessage()).thenReturn("Expected message");
+        constraints.add(constraint);
 
         ConstraintViolationException exception = new ConstraintViolationException("Validation failed.", constraints);
 
-        // Act
-        ResponseEntity<MessageDto> responseEntity = globalExceptionHandler.handleConstraintViolation(exception);
-
-        // Assert
-        assertEquals(OK_REQUEST, responseEntity.getStatusCode());
-        String responseBody = Objects.requireNonNull(responseEntity.getBody()).getMessage();
-        Assertions.assertTrue(responseBody.contains("Expected message"));
+        StepVerifier.create(globalExceptionHandler.handleConstraintViolation(exception))
+                .consumeNextWith(responseEntity -> {
+                    assertEquals(OK_REQUEST, responseEntity.getStatusCode());
+                    assertTrue(Objects.requireNonNull(responseEntity.getBody()).getMessage().contains("Expected message"));
+                })
+                .verifyComplete();
     }
 
 
     @Test
     void testHandleChallengeNotFoundException() {
-        // Arrange
-        ChallengeNotFoundException challengeNotFoundException = new ChallengeNotFoundException("Challenge not found");
+        // El mensaje específico aquí es irrelevante para el comportamiento del manejador de excepciones en esta prueba.
+        ChallengeNotFoundException exception = new ChallengeNotFoundException("Este mensaje es ignorado en el manejador.");
 
-        // Act
-        ResponseEntity<MessageDto> responseEntity = globalExceptionHandler.handleChallengeNotFoundException(challengeNotFoundException);
-
-        // Assert
-        assertEquals(BAD_REQUEST, responseEntity.getStatusCode());
-        String responseBody = Objects.requireNonNull(responseEntity.getBody()).getMessage();
-        Assertions.assertTrue(responseBody.contains("Challenge not found"));
+        StepVerifier.create(globalExceptionHandler.handleChallengeNotFoundException(exception))
+                .consumeNextWith(responseEntity -> {
+                    assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
+                    assertTrue(responseEntity.getBody().getMessage().contains("Challenge Id not found"));
+                })
+                .verifyComplete();
     }
 
     @Test
     void testHandleResourceNotFoundException() {
-        // Arrange
-        ResourceNotFoundException resourceNotFoundException = new ResourceNotFoundException("Resource not found");
+        ResourceNotFoundException exception = new ResourceNotFoundException("Resource not found");
 
-        // Act
-        ResponseEntity<MessageDto> responseEntity = globalExceptionHandler.handleResourceNotFoundException(resourceNotFoundException);
-
-        // Assert
-        assertEquals(OK_REQUEST, responseEntity.getStatusCode());
-        String responseBody = Objects.requireNonNull(responseEntity.getBody()).getMessage();
-        Assertions.assertTrue(responseBody.contains("Resource not found"));
+        StepVerifier.create(globalExceptionHandler.handleResourceNotFoundException(exception))
+                .consumeNextWith(responseEntity -> {
+                    assertEquals(OK_REQUEST, responseEntity.getStatusCode());
+                    assertTrue(responseEntity.getBody().getMessage().contains("Resource not found"));
+                })
+                .verifyComplete();
     }
 
     @Test
     void test_HandleBadUUIDException() {
-        // Arrange
-        BadUUIDException badUUIDException = new BadUUIDException("Invalid Id format");
+        BadUUIDException exception = new BadUUIDException("Invalid Id format");
 
-        // Act
-        ResponseEntity<MessageDto> responseEntity = globalExceptionHandler.handleBadUUIDException(badUUIDException);
-
-        // Assert
-        assertEquals(BAD_REQUEST, responseEntity.getStatusCode());
-        String responseBody = Objects.requireNonNull(responseEntity.getBody()).getMessage();
-        Assertions.assertTrue(responseBody.contains("Invalid Id format"));
+        StepVerifier.create(globalExceptionHandler.handleBadUUIDException(exception))
+                .consumeNextWith(responseEntity -> {
+                    assertEquals(BAD_REQUEST, responseEntity.getStatusCode());
+                    assertTrue(responseEntity.getBody().getMessage().contains("Invalid Id format"));
+                })
+                .verifyComplete();
     }
-
-
 
 }
